--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
         <div class="label">備考</div>
         <textarea id="message2" rows="4" placeholder="メッセージを入力してください"></textarea>
 
-        <button class="submit-button" onclick="submitForm()" div id="section-message">送信</button>
+        <button class="submit-button" onclick="submitForm()" div id="section-message">アンケート送信</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script> <!-- LIFF SDKの読み込み -->
@@ -1349,40 +1349,36 @@ function submitForm() {
   const birthYmd  = (document.getElementById('message3')?.value || '').trim();  // 誕生日（西暦）
   const tel       = (document.getElementById('message4')?.value || '').trim();  // 電話番号
   const address   = (document.getElementById('message5')?.value || '').trim();  // ご住所
-  const iro   = (document.getElementById('message6')?.value || '').trim();  // ご住所
+  const iro       = (document.getElementById('message6')?.value || '').trim();  // 好きな色
   const note = (document.querySelector('textarea[placeholder="メッセージを入力してください"]')?.value || '').trim(); // 備考
 
   // ===== ボタン選択の値（selectXXX 内で更新される想定）=====
   // chanceValue, reasonValues[], jobValue, hobbyValue, nailsValue, holdValue,
   // fragileFingerValue, peelValue, dislikeValue, handUsageValue, workScopeValue,
   // purposeValue, interestValue, allergyValue, allergyDetail, reasonReferralName
-  // ▼ たばこ関連（今回追加分）
-  // tabakoValue（吸う/吸わない）, tabakodottiValue（紙タバコ/電子タバコ）
+  // tabakoValue（吸う/吸わない）, tabakodottiValue（紙/電子 or 読点結合）, window.tabakodottiValues（配列）
 
   // ===== 必須チェック =====
-  // テキスト
   if (!nameKanji) return alert('「お名前（漢字）」を入力してください。');
   if (!nameKana)  return alert('「お名前（フリガナ）」を入力してください。');
   if (!birthYmd)  return alert('「誕生日（西暦）」を入力してください。');
   if (!tel)       return alert('「電話番号」を入力してください。');
   if (!address)   return alert('「ご住所」を入力してください。');
 
-  // ボタン（ラベルの必須に合わせて）
-  if (!chanceValue)        return alert('「施術中」のご希望をお選びください。');
-  if (!reasonValues.length)return alert('「当店を選んでくださった理由」をお選びください。');
-  if (!hobbyValue)         return alert('「趣味」をお選びください。');
-  if (!nailsValue)         return alert('「爪・手足の状態」で該当するものをお選びください。');
-  if (!holdValue)          return alert('「普段のネイルの持ち」をお選びください。');
-  if (!fragileFingerValue) return alert('「取れやすい爪」をお選びください。');
-  if (!peelValue)          return alert('「取れ方」をお選びください。');
-  if (!dislikeValue)       return alert('「今までのサロンで嫌だった事」をお選びください。');
-  if (!handUsageValue)     return alert('「手の使い方、指先の使用頻度」をお選びください。');
-  if (!workScopeValue)     return alert('「お仕事でOKな範囲」をお選びください。');
-  if (!purposeValue)       return alert('「ネイルをすることの目的・得たいこと」をお選びください。');
-  if (!interestValue)      return alert('「興味のあるメニュー」をお選びください。');
-  if (!allergyValue)       return alert('「アレルギーはありますか？」をお選びください。');
+  if (!chanceValue)         return alert('「施術中」のご希望をお選びください。');
+  if (!reasonValues.length) return alert('「当店を選んでくださった理由」をお選びください。');
+  if (!hobbyValue)          return alert('「趣味」をお選びください。');
+  if (!nailsValue)          return alert('「爪・手足の状態」で該当するものをお選びください。');
+  if (!holdValue)           return alert('「普段のネイルの持ち」をお選びください。');
+  if (!fragileFingerValue)  return alert('「取れやすい爪」をお選びください。');
+  if (!peelValue)           return alert('「取れ方」をお選びください。');
+  if (!dislikeValue)        return alert('「今までのサロンで嫌だった事」をお選びください。');
+  if (!handUsageValue)      return alert('「手の使い方、指先の使用頻度」をお選びください。');
+  if (!workScopeValue)      return alert('「お仕事でOKな範囲」をお選びください。');
+  if (!purposeValue)        return alert('「ネイルをすることの目的・得たいこと」をお選びください。');
+  if (!interestValue)       return alert('「興味のあるメニュー」をお選びください。');
+  if (!allergyValue)        return alert('「アレルギーはありますか？」をお選びください。');
 
-  // 追加必須：ご紹介/アレルギー詳細
   const pickedReferral = reasonValues.some(v => v.startsWith('ご紹介'));
   if (pickedReferral && !reasonReferralName) {
     return alert('ご紹介を選ばれた場合は「ご紹介者様のお名前」を入力してください。');
@@ -1391,17 +1387,46 @@ function submitForm() {
     return alert('アレルギーの内容をご入力ください。');
   }
 
-  // ▼▼ ここから たばこ関連の必須チェックを追加 ▼▼
+  // たばこ関連
   if (!tabakoValue) {
     return alert('「タバコは吸われますか？」をお選びください。');
   }
-  if (tabakoValue === '吸う' && !tabakodottiValue) {
-    return alert('「紙タバコ」または「電子タバコ」をお選びください。');
+  if (tabakoValue === '吸う') {
+    // 紙/電子は複数選択の可能性があるので、配列 or 読点結合のどちらでもOKにする
+    const hasDotti =
+      (Array.isArray(window.tabakodottiValues) && window.tabakodottiValues.length > 0) ||
+      (typeof tabakodottiValue === 'string' && tabakodottiValue.trim() !== '');
+    if (!hasDotti) return alert('「紙タバコ」または「電子タバコ」をお選びください。');
   }
-  // ▲▲ たばこ関連 ここまで ▲▲
 
-  // ===== 整形（箇条書きなど）=====
-  const reasonLines = reasonValues.map(v => `・${v}`).join('\n');
+  // ===== 複数選択を改行で整形するヘルパー =====
+  const bullets = (v) => {
+    // v が配列ならそのまま、文字列で "、" を含むなら分割、単一なら配列化、空は []
+    const arr = Array.isArray(v)
+      ? v
+      : (typeof v === 'string' && v.includes('、'))
+        ? v.split('、').map(s => s.trim()).filter(Boolean)
+        : (v ? [v] : []);
+    return arr.map(s => `・${s}`).join('\n');
+  };
+
+  // 各項目を「改行付きの箇条書き」に整形（単一でもOK）
+  const chanceLines        = bullets(window.chanceValues ?? chanceValue);
+  const reasonLines        = bullets(reasonValues);                // これは元から配列
+  const hobbyLines         = bullets(window.hobbyValues ?? hobbyValue);
+  const nailsLines         = bullets(window.nailsValues ?? nailsValue);
+  const holdLines          = bullets(holdValue);
+  const fragileFingerLines = bullets(window.fragileFingerValues ?? fragileFingerValue);
+  const peelLines          = bullets(window.peelValues ?? peelValue);
+  const dislikeLines       = bullets(window.dislikeValues ?? dislikeValue);
+  const handUsageLines     = bullets(window.handUsageValues ?? handUsageValue);
+  const workScopeLines     = bullets(workScopeValue);
+  const purposeLines       = bullets(window.purposeValues ?? purposeValue);
+  const interestLines      = bullets(window.interestValues ?? interestValue);
+  const tabakoLines        = bullets(tabakoValue);
+  const tabakodottiLines   = tabakoValue === '吸う'
+    ? bullets(window.tabakodottiValues ?? tabakodottiValue)
+    : '';
 
   // ===== 送信用オブジェクト（必要に応じてGAS連携にも流用可）=====
   const formData = {
@@ -1411,64 +1436,106 @@ function submitForm() {
     tel,
     address,
     iro,
-    chanceValue,
-    reasonValues,
-    jobValue,                 // 任意
-    hobbyValue,
-    nailsValue,
-    holdValue,
-    fragileFingerValue,
-    peelValue,
-    dislikeValue,
-    handUsageValue,
-    workScopeValue,
-    purposeValue,
-    interestValue,
-    // ▼ たばこ関連（今回追加）
-    tabakoValue,              // 吸う / 吸わない
-    tabakodottiValue,         // 紙タバコ / 電子タバコ（吸う時のみ有効）
-    // ▲ たばこ関連
+    chance: window.chanceValues ?? chanceValue,
+    reasons: reasonValues,
+    job: jobValue,
+    hobby: window.hobbyValues ?? hobbyValue,
+    nails: window.nailsValues ?? nailsValue,
+    hold: holdValue,
+    fragile: window.fragileFingerValues ?? fragileFingerValue,
+    peel: window.peelValues ?? peelValue,
+    dislike: window.dislikeValues ?? dislikeValue,
+    handUsage: window.handUsageValues ?? handUsageValue,
+    workScope: workScopeValue,
+    purpose: window.purposeValues ?? purposeValue,
+    interest: window.interestValues ?? interestValue,
+    tabako: tabakoValue,
+    tabakodotti: window.tabakodottiValues ?? tabakodottiValue,
     allergyValue,
-    allergyDetail,            // 「ある」のときのみ有効
+    allergyDetail,
     note,
   };
 
   // ===== LIFFで送信（テキスト整形）=====
-  const tabakoLine =
-    tabakoValue === '吸う'
-      ? `【タバコ】\n・${tabakoValue}（${tabakodottiValue}）\n`
-      : `【タバコ】\n・${tabakoValue}\n`;
-
   const msg =
 `≪アンケート≫
 
-【お名前（漢字）】\n・${nameKanji}
-【お名前（フリガナ）】\n・${nameKana}
-【誕生日（西暦）】\n・${birthYmd}
-【電話番号】\n・${tel}
-【ご住所】\n・${address}
+【お名前（漢字）】
+・${nameKanji}
+【お名前（フリガナ）】
+・${nameKana}
+【誕生日（西暦）】
+・${birthYmd}
+【電話番号】
+・${tel}
+【ご住所】
+・${address}
 
-【施術中のご希望】\n・${chanceValue}
-【当店を選んだ理由】\n${reasonLines}
-${jobValue ? `\n【職業】\n・${jobValue}\n` : ''}【趣味】\n・${hobbyValue}
-【爪・手足の状態】\n・${nailsValue}
-【普段のネイルの持ち】\n・${holdValue}
-【取れやすい爪】\n・${fragileFingerValue}
-【取れ方】\n・${peelValue}
-【手の使い方/指先の使用頻度】\n・${handUsageValue}
-【今までのサロンで嫌だった事】\n・${dislikeValue}
-【お仕事でOKな範囲】\n・${workScopeValue}
-【好きな色、やってみたい色】\n・${iro}
-【ネイルの目的】\n・${purposeValue}
-【興味のあるメニュー】\n・${interestValue}
-${tabakoLine}【アレルギー】\n・${allergyValue}${allergyDetail ? `（${allergyDetail}）` : ''}
-${note ? `\n【備考】\n・${note}` : ''}`;
+【施術中のご希望】
+${chanceLines || '・未選択'}
 
-  // LIFFログイン状態の確認
+【当店を選んだ理由】
+${reasonLines || '・未選択'}
+
+${jobValue ? `【職業】
+・${jobValue}
+` : ''}【趣味】
+${hobbyLines || '・未選択'}
+
+【爪・手足の状態】
+${nailsLines || '・未選択'}
+
+【普段のネイルの持ち】
+${holdLines || '・未選択'}
+
+【取れやすい爪】
+${fragileFingerLines || '・未選択'}
+
+【取れ方】
+${peelLines || '・未選択'}
+
+【今までのサロンで嫌だった事】
+${dislikeLines || '・未選択'}
+
+【手の使い方/指先の使用頻度】
+${handUsageLines || '・未選択'}
+
+【お仕事でOKな範囲】
+${workScopeLines || '・未選択'}
+
+【好きな色、やってみたい色】
+・${iro || '未入力'}
+
+【ネイルの目的】
+${purposeLines || '・未選択'}
+
+【興味のあるメニュー】
+${interestLines || '・未選択'}
+
+【タバコ】
+${tabakoLines}${tabakodottiLines ? `\n${tabakodottiLines}` : ''}
+
+【アレルギー】
+・${allergyValue}${allergyDetail ? `（${allergyDetail}）` : ''}
+
+${note ? `【備考】
+・${note}` : ''}`;
+
   if (typeof liff !== 'undefined' && liff.isLoggedIn && !liff.isLoggedIn()) {
     liff.login();
     return;
   }
+
+  liff.sendMessages([{ type: 'text', text: msg }])
+    .then(() => {
+      alert('ご記入ありがとうございます。「OK」をタップしてください。');
+      if (liff.closeWindow) liff.closeWindow();
+    })
+    .catch(err => {
+      console.error('メッセージ送信に失敗しました:', err);
+      alert('送信に失敗しました。通信環境をご確認の上、もう一度お試しください。');
+    });
+}
 
   liff.sendMessages([{ type: 'text', text: msg }])
     .then(() => {
