--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
         <!-- 手の使い方/指先の使用頻度（単一選択） -->
         <div class="label">　手の使い方、指先の使用頻度<span class="required">必須</span><br>について教えてください。<br>（複数回答可）</div>
         <div class="experience-buttons" id="handUsageGroup">
-            <button type="button" id="handUseiti" onclick="selectHandUsage(this)">日常生活で指先をよく使う<br>（爪先でシールを剥がす等）</button>
+            <button type="button" id="handUseiti" onclick="selectHandUsage(this)">日常生活で指先をよく使う（爪先でシールを剥がす等）</button>
             <button type="button" id="handUseni" onclick="selectHandUsage(this)">水仕事が多い</button>
             <button type="button" id="handUsesan" onclick="selectHandUsage(this)">パソコン作業が多い</button>
             <button type="button" id="handUseyon" onclick="selectHandUsage(this)">小さい子供がいる</button>
