--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
                     let cur = Array.from(document.querySelectorAll('#reasonGroup button.active'))
                         .map(b => b.innerText)
                         .filter(t => t !== 'ご紹介');
-                    if (val) cur.push(`ご紹介（${val}）`);
+                    if (val) cur.push(`ご紹介（紹介者：${val}）`);
                     reasonValues = cur;
                 };
             }
